--- a/less/global.less
+++ b/less/global.less
@@ -40,3 +40,8 @@ p {
   margin: 0 auto;  
 }
 
+.website-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
